Added ui subproject.

--- a/phantombox-client-api/build.gradle
+++ b/phantombox-client-api/build.gradle
@@ -12,5 +12,6 @@ compileJava.dependsOn('loadProperties')
 
 dependencies {
 
+    compile('com.git.phantombox:phantombox-domain-api:1.0.0')
     compile('javax.media:jmf:2.1.1e')
 }
