--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name='phantombox-client'
 
 include 'phantombox-client-api'
+include 'phantombox-client-net'
 include 'phantombox-client-domain'
 include 'phantombox-client-webcam'
 include 'phantombox-client-ui'
