--- a/phantombox-client-ui/build.gradle
+++ b/phantombox-client-ui/build.gradle
@@ -1,3 +1,5 @@
+apply plugin: 'eclipse'
+
 dependencies {
 
     /* ---------------- phantombox dependencies ---------------- */
@@ -16,4 +18,5 @@ dependencies {
     compile('org.springframework:spring-context:3.1.2.RELEASE')
     compile('org.springframework:spring-core:3.1.2.RELEASE')
 
+	compile('com.jgoodies:forms:1.2.1')
 }
