--- a/phantombox-client-ui/build.gradle
+++ b/phantombox-client-ui/build.gradle
@@ -1,5 +1,9 @@
 apply plugin: 'eclipse'
 
+checkstyleMain {
+    exclude('**/*.java')
+}
+
 dependencies {
 
     /* ---------------- phantombox dependencies ---------------- */
