codereview. add stop call feature. not tested.

--- a/phantombox-client-api/build.gradle
+++ b/phantombox-client-api/build.gradle
@@ -14,4 +14,5 @@ dependencies {
 
     compile('com.git.phantombox:phantombox-domain-api:1.0.0')
     compile('javax.media:jmf:2.1.1e')
+    compile('com.google.guava:guava:13.0.1')
 }
