--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,21 @@ subprojects {
             ivy { url file(System.getProperty('user.home') + '/.ivylocal') }
         }
     }
+	
+	task sourcesJar(type: Jar, dependsOn: classes) {
+        classifier = 'sources'
+        from sourceSets.main.allSource
+    }
+
+    task javadocJar(type: Jar, dependsOn: javadoc) {
+        classifier = 'javadoc'
+        from javadoc.destinationDir
+    }
+
+    artifacts {
+        archives sourcesJar
+        archives javadocJar
+    }
 
 /* ---------------- integration tests setup ---------------- */
     configurations {
