--- a/phantombox-client-api/build.gradle
+++ b/phantombox-client-api/build.gradle
@@ -13,6 +13,7 @@ compileJava.dependsOn('loadProperties')
 dependencies {
 
     compile('com.git.phantombox:phantombox-domain-api:1.0.0')
+	compile('com.git.phantombox:phantombox-broker-api:1.0.0')
     compile('javax.media:jmf:2.1.1e')
     compile('com.google.guava:guava:13.0.1')
 }
