--- a/phantombox-client-ui/build.gradle
+++ b/phantombox-client-ui/build.gradle
@@ -10,7 +10,7 @@ dependencies {
     compile('com.git.phantombox:phantombox-domain-api:1.0.0')
     compile('com.git.phantombox:phantombox-domain-impl:1.0.0')
     compile('com.git.phantombox:phantombox-domain-util:1.0.0')
-    compile('com.git.phantombox:phantombox-broker-api:1.0.0')
+    //compile('com.git.phantombox:phantombox-broker-api:1.0.0')
     compile('com.git.phantombox:phantombox-broker-impl:1.0.0')
     compile('com.git.phantombox:phantombox-broker-ui:1.0.0')
     compile project(':phantombox-client-api')
