--- a/phantombox-client-ui/build.gradle
+++ b/phantombox-client-ui/build.gradle
@@ -25,3 +25,14 @@ dependencies {
 
     compile('com.jgoodies:forms:1.2.1')
 }
+
+jar {
+
+	manifest {
+        attributes 'Main-Class': 'com.git.client.ui.MainApplication'
+    }
+	
+	 from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
