--- a/phantombox-client-ui/build.gradle
+++ b/phantombox-client-ui/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     compile('com.jgoodies:forms:1.2.1')
 }
 
-jar {
+/*jar {
 
 	manifest {
         attributes 'Main-Class': 'com.git.client.ui.MainApplication'
@@ -36,3 +36,4 @@ jar {
         configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
+*/
